--- a/BeeSwarmSim.html
+++ b/BeeSwarmSim.html
@@ -113,10 +113,10 @@
         <h2 class="text-3xl font-mono font-semibold mb-10">Skills</h2>
 
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 font-mono">
-            <div class="card">Unity (C#)</div>
-            <div class="card">Gameplay Systems</div>
-            <div class="card">Version controll / GitFork</div>
-            <div class="card">Tooling - Unity / GitFork</div>
+            <div class="skillCard">Unity (C#)</div>
+            <div class="skillCard">Gameplay Systems</div>
+            <div class="skillCard">Version controll / GitFork</div>
+            <div class="skillCard">Tooling - Unity / GitFork</div>
         </div>
     </section>
 
