--- a/index.html
+++ b/index.html
@@ -146,7 +146,6 @@
         </p>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 font-mono">
             <a href="BeeSwarmSim.html"
-               target="_blank"
                rel="noopener"
                class="card">
 
@@ -164,7 +163,6 @@
         </p>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 font-mono">
             <a href="Dungeon Crawler.html"
-               target="_blank"
                rel="noopener"
                class="card">
 
@@ -180,9 +178,8 @@
         <p>
             -------------------------------------------------------------------------------------------------------
         </p>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 font-mono">
+        <div class="projectCard">
             <a href="SharkBite.html"
-               target="_blank"
                rel="noopener"
                class="card">
 
@@ -212,44 +209,40 @@
     </section>
 
     <!-- GAMES -->
-    <section id="games" class="section">
-        <div class="section-inner">
-            <h2 class="section-title">Games</h2>
+    <section id="games" class="max-w-6xl mx-auto px-4 py-32">
+        <h2 class="text-3xl font-mono font-semibold mb-6">Games</h2>
 
-            <div class="card-grid">
-                <div class="card game-card">
-                    <img src="Images/game1.jpg" alt="Game preview">
-                    <div class="card-content">
-                        <h3>Game Name</h3>
-                        <a class="btn link-btn" href="https://anidrag.itch.io/game-name" target="_blank">
-                            Play on Itch.io
-                        </a>
-                    </div>
+        <div class="card-grid">
+            <div class="card game-card">
+                <img src="Images/SharkBiteFrontPage.png" alt="Game preview">
+                <div class="card-content">
+                    <h3>Shark Bite</h3>
+                    <a class="btn link-btn" href="https://anidrag.itch.io/game-name" target="_blank">
+                        A group project game with 6 people in the span of 3 week. 
+                        We present a vampire survivor esk game.
+                    </a>
                 </div>
             </div>
-        </div>
+        </div>        
     </section>
 
     <!-- UNITY PACKS -->
-    <section id="unity-packs" class="section">
-        <div class="section-inner">
-            <h2 class="section-title">Unity Packs</h2>
-
-            <div class="card-list">
-                <a class="card link-card" href="https://assetstore.unity.com/packages/xxxxx" target="_blank">
+    <section id="unity-packs" class="max-w-6xl mx-auto px-4 py-32">
+        <h2 class="text-3xl font-mono font-semibold mb-6">Unity Packs</h2>
+            <div>
+                <a class="projectCard" href="https://assetstore.unity.com/packages/xxxxx" target="_blank">
                     <h3>Modular Movement System</h3>
                     <p>Unity Asset Store</p>
                 </a>
 
-                <a class="card link-card" href="https://github.com/AniDrag/PackRepo" target="_blank">
+                <a class="projectCard" href="https://github.com/AniDrag/PackRepo" target="_blank">
                     <h3>Open-source Pack (WIP)</h3>
                     <p>GitHub repository</p>
                 </a>
             </div>
-        </div>
     </section>
 
-    <!-- JS -->
-    <script src="code.js"></script>
+        <!-- JS -->
+        <script src="code.js"></script>
 </body>
 </html>
