--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 
         <div class="flex gap-3 mb-6 flex-wrap font-mono text-sm">
             <button class="filter-btn" data-filter="All">All</button>
+            <button class="filter-btn" data-filter="My Art">My art</button>
             <button class="filter-btn" data-filter="BeeSwarmSim">Bee Swarm</button>
             <button class="filter-btn" data-filter="SharkBite">Shark Bite</button>
             <button class="filter-btn" data-filter="DungeonCrawler">Dungeon</button>
