--- a/index.html
+++ b/index.html
@@ -195,18 +195,17 @@
     </section>
 
     <!-- GALLERY -->
-    <section id="gallery" class="max-w-6xl mx-auto px-4 py-32">
-        <h2 class="text-3xl font-mono font-semibold mb-6">Gallery</h2>
+    <section id="gallery">
+        <div class="gallery-container">
+            <h2 class="text-3xl font-mono font-semibold mb-6">Gallery</h2>
 
-        <div class="flex gap-3 mb-6 flex-wrap font-mono text-sm">
-            <button class="filter-btn" data-filter="All">All</button>
-            <button class="filter-btn" data-filter="My Art">My art</button>
-            <button class="filter-btn" data-filter="BeeSwarmSim">Bee Swarm</button>
-            <button class="filter-btn" data-filter="SharkBite">Shark Bite</button>
-            <button class="filter-btn" data-filter="DungeonCrawler">Dungeon</button>
+            <!-- Filter buttons will be auto-generated here -->
+            <div id="filter-buttons">
+                <!-- Buttons will be inserted here by JavaScript -->
+            </div>
+
+            <div id="gallery-grid" class="gallery-grid"></div>
         </div>
-
-        <div id="gallery-grid" class="card-grid"></div>
     </section>
 
     <!-- GAMES -->
